--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
   },
   "dependencies": {
     "cross-fetch": "^3.1.4",
-    "loot-rarity": "^4.2.0"
+    "loot-rarity": "^4.2.0",
+    "shorthash2": "^1.0.3"
   }
 }
